--- a/Scance_23112020/Scance_23112020.csproj
+++ b/Scance_23112020/Scance_23112020.csproj
@@ -47,17 +47,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Box.cs">
+    <Compile Include="BoxForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Box.Designer.cs">
-      <DependentUpon>Box.cs</DependentUpon>
+    <Compile Include="BoxForm.Designer.cs">
+      <DependentUpon>BoxForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Compartiment.cs">
+    <Compile Include="CompartimentForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Compartiment.Designer.cs">
-      <DependentUpon>Compartiment.cs</DependentUpon>
+    <Compile Include="CompartimentForm.Designer.cs">
+      <DependentUpon>CompartimentForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LivreurForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LivreurForm.Designer.cs">
+      <DependentUpon>LivreurForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\Boxs.cs" />
     <Compile Include="Model\Compartiments.cs" />
@@ -67,14 +73,16 @@
     <Compile Include="Model\Client_Indi.cs" />
     <Compile Include="Model\Client_Pro.cs" />
     <Compile Include="Model\Colis.cs" />
-    <Compile Include="Model\Ville.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Box.resx">
-      <DependentUpon>Box.cs</DependentUpon>
+    <EmbeddedResource Include="BoxForm.resx">
+      <DependentUpon>BoxForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Compartiment.resx">
-      <DependentUpon>Compartiment.cs</DependentUpon>
+    <EmbeddedResource Include="CompartimentForm.resx">
+      <DependentUpon>CompartimentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LivreurForm.resx">
+      <DependentUpon>LivreurForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
