--- a/Scance_23112020/Scance_23112020.csproj
+++ b/Scance_23112020/Scance_23112020.csproj
@@ -87,6 +87,9 @@
     <EmbeddedResource Include="CompartimentForm.resx">
       <DependentUpon>CompartimentForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="LivreurForm.resx">
+      <DependentUpon>LivreurForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
