Finissions de ColisForm

--- a/Scance_23112020/Scance_23112020.csproj
+++ b/Scance_23112020/Scance_23112020.csproj
@@ -84,6 +84,9 @@
     <EmbeddedResource Include="BoxForm.resx">
       <DependentUpon>BoxForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ColisForm.resx">
+      <DependentUpon>ColisForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CompartimentForm.resx">
       <DependentUpon>CompartimentForm.cs</DependentUpon>
     </EmbeddedResource>
