--- a/Scance_23112020/Scance_23112020.csproj
+++ b/Scance_23112020/Scance_23112020.csproj
@@ -81,6 +81,12 @@
     <Compile Include="Model\Colis.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VilleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VilleForm.Designer.cs">
+      <DependentUpon>VilleForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BoxForm.resx">
       <DependentUpon>BoxForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -102,6 +108,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="VilleForm.resx">
+      <DependentUpon>VilleForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
